samples/_failures_safe/1761349984_ea742e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2a8fd78e.c: In function ‘main’:
./samples/SAFE/__tmp_2a8fd78e.c:172:13: error: expected expression at end of input
  172 |             buffer[len -
      |             ^~~~~~
./samples/SAFE/__tmp_2a8fd78e.c:172:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2a8fd78e.c:172:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2a8fd78e.c:172:13: error: expected declaration or statement at end of input
